# haskellday2016

./: LICENSE  README.md  haskellday2016.cabal  migration.sql  stack.yaml
app/: Main.hs
views/: index.mustache  login.mustache
