name:                haskellday2016
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , stache
                     , bytestring
                     , text
                     , transformers
                     , bcrypt
                     , http-types
                     , mysql-simple
                     , wai-extra
                     , Spock
  default-language:    Haskell2010
